CSS fix. The pencil icon wasn't visible.

--- a/css/converse.css
+++ b/css/converse.css
@@ -2008,8 +2008,6 @@
     text-align: left;
     padding: 0;
     padding-left: 0.3em; }
-    #conversejs #controlbox .fancy-dropdown .choose-xmpp-status {
-      width: 155px; }
     #conversejs #controlbox .fancy-dropdown .choose-xmpp-status,
     #conversejs #controlbox .fancy-dropdown .toggle-xmpp-contact-form {
       text-shadow: 0 1px 0 #ffffff;
