--- a/sass/_controlbox.scss
+++ b/sass/_controlbox.scss
@@ -294,9 +294,6 @@
             text-align: left;
             padding: 0;
             padding-left: 0.3em;
-            .choose-xmpp-status {
-                width: 155px;
-            }
             .choose-xmpp-status,
             .toggle-xmpp-contact-form {
                 text-shadow: 0 1px 0 #ffffff;
